# brandprobe

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  cube_results.csv  main.py  pyproject.toml  test_roberta.py  test_visuals.py  verify_cube.py
brandprobe/: __init__.py  analytics.py  engines.py  example_notebook.ipynb  probers.py  runner.py  scorers.py  visualizations.py
documentation/: technical_walkthrough.html  technical_walkthrough.md  user_guide.html  user_guide.md
notebooks/: custom_cases.json  custom_personas.json  test_gpt4omini_Greece.ipynb  test_ollama_example_1.ipynb  test_ollama_example_2.ipynb  test_ollama_example_3.ipynb  tourist_personas.json
