[project]
name = "brandprobe"
version = "1.0.0"
description = "A modular framework for auditing LLM sentiment using the 3D Cube Methodology"
readme = "README.md"
authors = [
    { name = "Dimitrios Panagopoulos", email = "your-email@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "openai>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "textblob>=0.18.0",
    "umap-learn>=0.5.11",
]
